# dmas_forge

./: .gitignore  README.md  go.work  go.work.sum
ai_plugins/: go.mod  go.sum
ai_plugins/a2a/: ir_client.go  ir_server.go  wiring.go
ai_plugins/mcp/: ir_client.go  ir_server.go  wiring.go
ai_plugins/memory_plugin/: README.md  ir.go  wiring.go
ai_plugins/model/: model.go
ai_plugins/openai_plugin/: ir.go  wiring.go
ai_plugins/python/: ir.go
ai_plugins/rag_plugin/: README.md  ir_knowledgebase.go  ir_openai_knowledgebase.go  ir_rag_agent.go  ir_vectorstore.go  wiring.go
ai_plugins/vllm/: ir_client.go  ir_vllm_container.go  wiring.go
ai_runtime/: go.mod  go.sum
ai_runtime/core/: agent.go  memory.go  rag.go  vectorstore.go
benchmark/: README.md  config.json  export-website-files.sh  go.mod  main.go  model.json  patch-generated-otel-deps.sh
benchmark/plots/: .gitignore  README.md  pyproject.toml
benchmark/plots/benchplots/: __init__.py  __main__.py  data.py  labels.py  plots.py  report.py  topology.py  topology_draw.py
benchmark/plots/benchplots/static/: report.css
benchmark/plots/benchplots/templates/: example.html  report.html
benchmark/queries/: chat.csv  financial-analyzer.csv  marketing-agency.csv  rag_chat.csv  travel-planning.csv  weather.csv
benchmark/runner/: build.go  cli.go  common.go  config.go  jaeger.go  list.go  run.go  summary.go
dmas_forge/core/: agent.py  context.py  llm.py  models.py  tool.py
examples/chat/: README.md
examples/financial-analyzer/: README.md
examples/marketing-agency/: README.md
(+130 files in other folders)
