[project]
name = "benchplots"
version = "0.1.0"
description = "Static plot report generator for DMAS Forge benchmark runs"
requires-python = ">=3.12,<3.13"
dependencies = [
    "jinja2>=3.1",
    "matplotlib>=3.9",
    "networkx>=3.3",
    "numpy>=2.0",
    "pandas>=2.2",
    "seaborn>=0.13",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
